--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditarSolicitud.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditarSolicitud.cshtml
@@ -52,7 +52,7 @@
     <!-- iCheck -->
     <link href="@Url.Content("~/Content/vendors/iCheck/skins/flat/green.css")" rel="stylesheet">
     <!--Handsontable -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/handsontable/14.6.1/handsontable.full.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/handsontable/14.6.1/handsontable.full.min.css" />
     <link href="~/Content/css/HansontableHeaderColors.css" rel="stylesheet" />
     <link href="~/Content/timeline.css" rel="stylesheet" />
     <style>
@@ -426,8 +426,8 @@
 
 
                                 @{ var asignacion = Model.SCDM_solicitud_asignaciones.LastOrDefault(x => x.id_departamento_asignacion == idEmpleadoDepartamento
-                                                                          && x.descripcion == Bitacoras.Util.SCDM_solicitudes_asignaciones_tipos.ASIGNACION_DEPARTAMENTO
-                                                                      );}
+                                                                              && x.descripcion == Bitacoras.Util.SCDM_solicitudes_asignaciones_tipos.ASIGNACION_DEPARTAMENTO
+                                                                          );}
                                 @if (asignacion != null && !string.IsNullOrEmpty(asignacion.comentario_scdm))
                                 {
                                     <div class="col-sm-12">
@@ -1017,7 +1017,6 @@
                                     @*DEPTO ASIGNACION INCORRECTA *@
                                     @if (User.IsInRole(TipoRoles.SCDM_MM_APROBACION_SOLICITUDES) && (
                                          viewUser == (int)Bitacoras.Util.SCDM_tipo_view_edicionENUM.DEPARTAMENTO)
-                                        && !solicitudCerradaDepartamento
                                         && !details)
                                     {
                                         <button id="btn-asignacion-incorrecta-departamento" class="btn btn-warning btn-lg float-lg-left" style="color:dimgray">
@@ -1029,7 +1028,6 @@
                                     @if (User.IsInRole(TipoRoles.SCDM_MM_APROBACION_SOLICITUDES) && (
                                         viewUser == (int)Bitacoras.Util.SCDM_tipo_view_edicionENUM.DEPARTAMENTO_INICIAL
                                         || viewUser == (int)Bitacoras.Util.SCDM_tipo_view_edicionENUM.DEPARTAMENTO)
-                                        && !solicitudCerradaDepartamento
                                         && !details)
                                     {
                                         <button id="btn-aprobar-departamento" class="btn btn-primary btn-lg float-lg-right">
@@ -1052,7 +1050,7 @@
                                                 Rechazar Solicitud
                                             </a>
                                         }
-                                        else if (!solicitudCerradaDepartamento)
+                                        else
                                         {
                                             <button id="btn-rechazar" class="btn btn-danger btn-lg float-lg-right">
                                                 <svg width="28px" height="28px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M17 17L21 21M21 17L17 21M13 3H8.2C7.0799 3 6.51984 3 6.09202 3.21799C5.71569 3.40973 5.40973 3.71569 5.21799 4.09202C5 4.51984 5 5.0799 5 6.2V17.8C5 18.9201 5 19.4802 5.21799 19.908C5.40973 20.2843 5.71569 20.5903 6.09202 20.782C6.51984 21 7.0799 21 8.2 21H13M13 3L19 9M13 3V7.4C13 7.96005 13 8.24008 13.109 8.45399C13.2049 8.64215 13.3578 8.79513 13.546 8.89101C13.7599 9 14.0399 9 14.6 9H19M19 9V14M9 17H13M9 13H15M9 9H10" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
@@ -1407,6 +1405,18 @@
                     <input type="hidden" name="revisaFormato" value="@ViewBag.revisaFormato" />
                     <input type="hidden" name="revisaDepartamento" value="@ViewBag.revisaDepartamento" />
                     <input type="hidden" name="viewUser" value="@viewUser" />
+                    <div class="form-group">
+                        @Html.Label("Departamento", new { @class = "control-label" })
+                        <div class="col-md-12">
+                            <div class="form-group row">
+                                @Html.DropDownList("id_departamento_seleccionado",
+                                    ViewBag.DepartamentosParaCombo as SelectList,
+                                   "-- Seleccione Departamento --",
+                                   new { @class = "form-control select2bs4", style = "width:100%;", required = "required" })
+                                <span class="field-validation-valid text-danger" data-valmsg-for="id_departamento_seleccionado" data-valmsg-replace="true"></span>
+                            </div>
+                        </div>
+                    </div>
                     <p>
                         La solicitud será enviada a:<br />  @Html.Raw(ViewBag.revisaNombre != null ? ViewBag.revisaNombre : "NO DISPONIBLE")
                         <br /> <br /> No podrá hacer cambios una vez enviada la solicitud.
@@ -1438,14 +1448,26 @@
                     <div class="form-group row">
                         <h6>¿Realmente desea rechazar esta solicitud?</h6>
                         <br />
+                        @Html.AntiForgeryToken()
+                        @Html.HiddenFor(model => model.id)
+                        <div class="col-md-12">
+                            <h6>Departamento:</h6>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="form-group row">
+                                <div class="col-md-12">
+                                    @Html.DropDownList("id_departamento_seleccionado_rechazar",
+                                        ViewBag.DepartamentosParaCombo as SelectList,
+                                       "-- Seleccione Departamento --",
+                                       new { @class = "form-control select2bs4", style = "width:100%;", required = "required" })
+                                    <span class="field-validation-valid text-danger" data-valmsg-for="id_departamento_seleccionado_rechazar" data-valmsg-replace="true"></span>
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-md-12">
                             <h6>Razón de rechazo:</h6>
                         </div>
                         <div class="col-md-12">
-
-                            @Html.AntiForgeryToken()
-                            @Html.HiddenFor(model => model.id)
-
                             <div class="form-group row">
                                 <div class="col-md-12">
                                     @Html.DropDownList("id_motivo_rechazo", null, htmlAttributes: new { @class = "select2bs4 col-md-12", @style = "width:100%", @required = "required" })
@@ -1455,8 +1477,6 @@
                             <div class="col-md-12">
                                 <h6>Comentario:</h6>
                             </div>
-
-
                             @Html.TextAreaFor(model => model.comentario_rechazo, new { @class = "form-control", @rows = "4", @autocomplete = "off", @required = "required" })
                             @Html.ValidationMessageFor(model => model.comentario_rechazo, "", new { @class = "text-danger" })
 
@@ -1486,18 +1506,32 @@
                 <div class="modal-body">
                     <div class="form-group row">
                         <br />
+
+                        @Html.AntiForgeryToken()
+                        @Html.HiddenFor(model => model.id)
+
+                        <div class="col-md-12">
+                            <h6>Departamento:</h6>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="form-group row">
+                                <div class="col-md-12">
+                                    @Html.DropDownList("id_departamento_seleccionado_incorrecta",
+                                        ViewBag.DepartamentosParaCombo as SelectList,
+                                       "-- Seleccione Departamento --",
+                                       new { @class = "form-control select2bs4", style = "width:100%;", required = "required" })
+                                    <span class="field-validation-valid text-danger" data-valmsg-for="id_departamento_seleccionado_incorrecta" data-valmsg-replace="true"></span>
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-md-12">
                             <h6>Motivo de Asignación Incorrecta:</h6>
                         </div>
                         <div class="col-md-12">
-
-                            @Html.AntiForgeryToken()
-                            @Html.HiddenFor(model => model.id)
-
                             <div class="form-group row">
                                 <div class="col-md-12">
                                     @Html.DropDownList("id_motivo_asignacion_incorrecta", null, htmlAttributes: new { @class = "select2bs4 col-md-12", @style = "width:100%", @required = "required" })
-                                    <span class="field-validation-valid text-danger" data-valmsg-for="id_motivo_rechazo" data-valmsg-replace="true"></span>
+                                    <span class="field-validation-valid text-danger" data-valmsg-for="id_motivo_asignacion_incorrecta" data-valmsg-replace="true"></span>
                                 </div>
                             </div>
                             <div class="col-md-12">
@@ -1603,16 +1637,6 @@
                 theme: 'bootstrap4'
             })
 
-            //valida si la solicitud ya ha sido cerrada
-            if ('@(solicitudCerradaDepartamento)' == '@(true)' && '@(viewUserText)' == '@((int)Bitacoras.Util.SCDM_tipo_view_edicionENUM.DEPARTAMENTO)'
-            && '@(idEmpleadoDepartamento != (int)Bitacoras.Util.SCDM_departamentos_AsignacionENUM.SCDM)' == '@(true)'
-            ) {
-                Swal.fire({
-                    title: "Aviso",
-                    text: "Esta solicitud ya ha sido cerrada por el departamento.",
-                    icon: "warning"
-                });
-            }
 
             //inicializa icheck
             $('input').iCheck({
