2025-03-31 SCDM: Se corrige nombre de solicitante en solicitudes por Departtamento.

--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/SolicitudesDepartamento.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/SolicitudesDepartamento.cshtml
@@ -185,7 +185,7 @@
                                                         @Html.DisplayFor(modelItem => item.SCDM_solicitud.SCDM_rel_solicitud_plantas.FirstOrDefault().plantas.ConcatPlantaSap)
                                                     </td>
                                                     <td>
-                                                        @Html.DisplayFor(modelItem => item.empleados.ConcatNombre)
+                                                        @Html.DisplayFor(modelItem => item.SCDM_solicitud.empleados.ConcatNombre)
                                                     </td>
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.SCDM_solicitud.SCDM_cat_tipo_solicitud.descripcion)
