2025-04-03 CTZ: Se sube rediseño de formulario

--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -1064,8 +1064,8 @@
     @Scripts.Render(Url.Content("~/Scripts/site.js"))
 
 
-    @if (@HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority).Contains("desarrollo-portaltkmm")
-    || @HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority).Contains("calidad-portaltkmm"))
+    @if (@HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority).Contains("Xdesarrollo-portaltkmm")
+    || @HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority).Contains("Xcalidad-portaltkmm"))
     {
         <!-- toastr -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
